<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_qrcode_24dp"
            android:title="@string/nav_scan_barcode" />
    </group>
    <item android:title="@string/nav_drawer_exhibits_subtitle"
        android:id="@+id/nav_exhibits_section">
        <menu>
            <!-- Items will be added at runtime -->
        </menu>
    </item>
    <item android:title="@string/nav_drawer_visit_subtitle"
        android:id="@+id/nav_visit_section">
        <menu>
            <item
                android:id="@+id/visit_website"
                android:icon="@drawable/ic_museum_black_24dp"
                android:title="@string/nav_visit_website" />
            <item
                android:id="@+id/get_tickets"
                android:icon="@drawable/ic_ticket_black_24dp"
                android:title="@string/nav_get_tickets" />
        </menu>
    </item>
</menu>
